--- a/system-image-loader/build.gradle
+++ b/system-image-loader/build.gradle
@@ -2,21 +2,23 @@ apply plugin: 'com.android.library'
 android androidConfiguration
 
 dependencies {
-    implementation project(":system-image-loader")
-    implementation project(":system-network")
-}
-
-dependencies {
-    implementation libs.appcompatV7
-    implementation libs.constraintLayout
-    implementation libs.recyclerView
     implementation libs.rxJava
     implementation libs.rxAndroid
     implementation libs.dagger
+    implementation libs.guava
+    implementation libs.okHttp
+    implementation libs.gson
+    compileOnly libs.autovalue
 }
 
 dependencies {
     annotationProcessor libs.daggerCompiler
+    annotationProcessor libs.autovalue
+    annotationProcessor aptLibs.parcel
+}
+
+dependencies {
+    implementation project(":system-network")
 }
 
 dependencies {
@@ -24,7 +26,4 @@ dependencies {
     testImplementation testLibs.mockito
     testImplementation testLibs.mockito_inline
     testImplementation testLibs.mockitoKotlin
-}
-dependencies {
-    implementation 'com.android.support.constraint:constraint-layout:+'
 }
