--- a/core-network/build.gradle
+++ b/core-network/build.gradle
@@ -2,28 +2,26 @@ apply plugin: 'com.android.library'
 android androidConfiguration
 
 dependencies {
+    implementation project(':system-http-client')
+}
+
+dependencies {
     implementation libs.rxJava
     implementation libs.rxAndroid
     implementation libs.dagger
-    implementation libs.guava
-    implementation libs.okHttp
+}
+
+dependencies {
     implementation libs.gson
-    compileOnly libs.autovalue
 }
 
 dependencies {
     annotationProcessor libs.daggerCompiler
-    annotationProcessor libs.autovalue
-    annotationProcessor aptLibs.parcel
-}
-
-dependencies {
-    implementation project(':system-http-client')
 }
 
 dependencies {
     testImplementation testLibs.jUnit
     testImplementation testLibs.mockito
-    testImplementation testLibs.mockito_inline
     testImplementation testLibs.mockitoKotlin
+    testImplementation testLibs.mockWebServer
 }
