--- a/system-http-client/build.gradle
+++ b/system-http-client/build.gradle
@@ -1,24 +1,11 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 android androidConfiguration
 
 dependencies {
-    implementation libs.rxJava
-    implementation libs.rxAndroid
-    implementation libs.dagger
-    implementation libs.guava
-    implementation libs.okHttp
-    implementation libs.gson
-    compileOnly libs.autovalue
-}
-
-dependencies {
-    annotationProcessor libs.daggerCompiler
-    annotationProcessor libs.autovalue
-    annotationProcessor aptLibs.parcel
-}
-
-dependencies {
-
+    implementation libs.kotlin
 }
 
 dependencies {
@@ -26,4 +13,7 @@ dependencies {
     testImplementation testLibs.mockito
     testImplementation testLibs.mockito_inline
     testImplementation testLibs.mockitoKotlin
+}
+repositories {
+    mavenCentral()
 }
