--- a/feature-image-search/build.gradle
+++ b/feature-image-search/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 android androidConfiguration
 
 dependencies {
@@ -13,6 +14,7 @@ dependencies {
     implementation libs.rxJava
     implementation libs.rxAndroid
     implementation libs.dagger
+    implementation libs.kotlin
 }
 
 dependencies {
@@ -24,4 +26,7 @@ dependencies {
     testImplementation testLibs.mockito
     testImplementation testLibs.mockito_inline
     testImplementation testLibs.mockitoKotlin
+}
+repositories {
+    mavenCentral()
 }
