--- a/system-image-loader/build.gradle
+++ b/system-image-loader/build.gradle
@@ -1,24 +1,13 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 android androidConfiguration
 
 dependencies {
-    implementation libs.rxJava
-    implementation libs.rxAndroid
-    implementation libs.dagger
-    implementation libs.guava
-    implementation libs.okHttp
-    implementation libs.gson
-    compileOnly libs.autovalue
-}
-
-dependencies {
-    annotationProcessor libs.daggerCompiler
-    annotationProcessor libs.autovalue
-    annotationProcessor aptLibs.parcel
-}
-
-dependencies {
     implementation project(':system-http-client')
+}
+
+dependencies {
+    implementation libs.kotlin
 }
 
 dependencies {
@@ -26,4 +15,7 @@ dependencies {
     testImplementation testLibs.mockito
     testImplementation testLibs.mockito_inline
     testImplementation testLibs.mockitoKotlin
+}
+repositories {
+    mavenCentral()
 }
