--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,16 +4,15 @@ android androidConfiguration
 
 dependencies {
     implementation project(":feature-image-search")
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
+    implementation project(":core-network")
+    implementation project(":system-http-client")
+    implementation project(":system-image-loader")
+    implementation project(":core-utils")
 }
 
 dependencies {
     implementation libs.appcompatV7
-    implementation libs.dagger
-}
-
-dependencies {
-    annotationProcessor libs.daggerCompiler
+    implementation libs.kotlin
 }
 
 dependencies {
