--- a/feature-image-search/build.gradle
+++ b/feature-image-search/build.gradle
@@ -1,6 +1,12 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 android androidConfiguration
+
+androidExtensions {
+    experimental = true
+}
 
 dependencies {
     implementation project(':core-utils')
