(REF, CORE) Structural changes, refactoring

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ android androidConfiguration
 dependencies {
     implementation project(":feature-image-search")
     implementation project(":core-network")
+    implementation project(":core-api")
     implementation project(":system-http-client")
     implementation project(":system-image-loader")
     implementation project(":core-utils")
