--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:name=".App">
-        <activity android:name="com.levnovikov.feature_image_search.ui.SearchActivity">
+        <activity android:name="com.levnovikov.feature_image_search.SearchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
