--- a/settings.gradle
+++ b/settings.gradle
@@ -1,24 +1,44 @@
 /**
  * app-level
+ * contains app-scope entities and resolves DI dependencies.
+ * Module can have any kind of dependencies since resolving DI.
  */
 include ':app'
 
 /**
  * feature-level
+ * contain feature business logic, UI and specific domain related repositories.
+ * Level will be changed frequently. Every changing should be approved by feature-owner.
+ *
+ * Modules can have data-level, system-level dependencies, special core-level (utils).
  */
 include ':feature-image-search'
 
 /**
  * data-level
+ * contain shareable data repositories (domain specific repos should be on feature-level)
+ * This level is more stable that feature-level but still will be changed frequently.
+ * Changes should get related feature-owners agreements.
+ *
+ * Modules can have core-level and system-level dependencies
  */
 include ':data-images'
 
 /**
  * core-level
+ * contains stable modules with critical functionality. Should have
+ * special reasons to change since all app will be affected.
+ * Changes should be approved by project architect.
+ *
+ * Modules can have only system-level dependencies
  */
 include ':core-network', ':core-utils', ':core-api'
 
 /**
  * system-level
+ * contains custom libs and solutions.
+ * Changes should be approved by lib creator.
+ *
+ * Modules can have only system-level dependencies
  */
 include ':system-image-loader', ':system-http-client'
